minor bug fixes for the selection function

--- a/dmu8/luminosity_calculation.ipynb
+++ b/dmu8/luminosity_calculation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,8 @@
     "import pickle\n",
     "import os\n",
     "import matplotlib.pyplot as plt\n",
-    "from pymoc import MOC"
+    "from pymoc import MOC\n",
+    "from utils import inMoc"
    ]
   },
   {
@@ -1559,6 +1560,36 @@
    ],
    "source": [
     "((lockman_coord.ra.value.max()-lockman_coord.ra.value.min())*(lockman_coord.dec.value.max()-lockman_coord.dec.value.min()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lockman_moc = MOC(filename='data/dmu13-lockman-hole-1_MOC.fits')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6377\n",
+      "6377\n",
+      "9046\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(lockman_coord))\n",
+    "print(sum(inMoc(lockman_coord.ra,lockman_coord.dec,lockman_moc)))\n",
+    "print(sum(inMoc(merged['ra'],merged['dec'],lockman_moc)))"
    ]
   },
   {
