Correct band names on COSMOS

--- a/dmu1/dmu1_ml_COSMOS/1.9_COSMOS2015.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/1.9_COSMOS2015.ipynb
@@ -95,44 +95,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "bands = OrderedDict({\n",
-    "    'ks': 'ks',\n",
-    "    'y': 'y',\n",
-    "    'h': 'h',\n",
-    "    'j': 'j',\n",
-    "    'b': 'b',\n",
-    "    'v': 'v',\n",
-    "    'ip': 'ip',\n",
-    "    'r': 'r',\n",
-    "    'u': 'u',\n",
-    "    'zp': 'zp',\n",
-    "    'zpp': 'zpp',\n",
-    "    'ia484': 'ia484',\n",
-    "    'ia527': 'ia527',\n",
-    "    'ia624': 'ia624',\n",
-    "    'ia679': 'ia679',\n",
-    "    'ia738': 'ia738',\n",
-    "    'ia767': 'ia767',\n",
-    "    'ib427': 'ib427',\n",
-    "    'ib464': 'ib464',\n",
-    "     'ib505': 'ib505',\n",
-    "    'ib574': 'ib574',\n",
-    "    'ib709': 'ib709',\n",
-    "    'ib827': 'ib827',\n",
-    "    'nb711': 'nb711',\n",
-    "    'nb816': 'nb816',\n",
-    "    'hw': 'hw',\n",
-    "    'ksw': 'ksw',\n",
-    "    'yhsc': 'yhsc',\n",
-    "    'splash_1': 'splash_1', #'irac_i1'???\n",
-    "    'splash_2': 'splash_1', # #irac_i2\n",
-    "    'splash_3': 'splash_1', # #irac_i1\n",
-    "    'splash_4': 'splash_1', # #irac_i4\n",
+    "    'ks': 'vista_ks',\n",
+    "    'y': 'vista_y',\n",
+    "    'h': 'vista_h',\n",
+    "    'j': 'vista_j',\n",
+    "\n",
+    "    #CFHT Megacam\n",
+    "    'u': 'megacam_u',\n",
+    "    #SUBARU Suprime\n",
+    "    'b': 'suprime_b',\n",
+    "    'v': 'suprime_v',\n",
+    "    'ip': 'suprime_ip',\n",
+    "    'r': 'suprime_rp',\n",
+    "    'zp': 'suprime_zp',\n",
+    "    'zpp': 'suprime_zpp',\n",
+    "    'ia484': 'suprime_ia484',\n",
+    "    'ia527': 'suprime_ia527',\n",
+    "    'ia624': 'suprime_ia624',\n",
+    "    'ia679': 'suprime_ia679',\n",
+    "    'ia738': 'suprime_ia738',\n",
+    "    'ia767': 'suprime_ia767',\n",
+    "    'ib427': 'suprime_ib427',\n",
+    "    'ib464': 'suprime_ib464',\n",
+    "    'ib505': 'suprime_ib505',\n",
+    "    'ib574': 'suprime_ib574',\n",
+    "    'ib709': 'suprime_ib709',\n",
+    "    'ib827': 'suprime_ib827',\n",
+    "    'nb711': 'suprime_nb711',\n",
+    "    'nb816': 'suprime_nb816',\n",
+    "    #CFHT WIRCAM\n",
+    "    'hw': 'wircam_h',\n",
+    "    'ksw': 'wircam_ks',\n",
+    "    #SUBARU HSC\n",
+    "    'yhsc': 'suprime_y',\n",
+    "    #Spitzer IRAC\n",
+    "    'splash_1': 'irac_i1', #'irac_i1'???\n",
+    "    'splash_2': 'irac_i2', # #irac_i2\n",
+    "    'splash_3': 'irac_i3', # #irac_i1\n",
+    "    'splash_4': 'irac_i4', # #irac_i4\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imported_columns = OrderedDict({\n",
+    "    'help_id': 'help_id',\n",
+    "    'id': 'cosmos_id',\n",
+    "    'alpha_j2000': 'cosmos_ra',\n",
+    "    'delta_j2000': 'cosmos_dec',\n",
+    "})\n",
+    "\n",
+    "for band in list(bands):\n",
+    "    if 'splash' not in band:\n",
+    "        imported_columns.update({band + '_mag_auto': 'm_cosmos-' + bands[band]})\n",
+    "        imported_columns.update({band + '_magerr_auto': 'merr_cosmos-' + bands[band]})\n",
+    "        imported_columns.update({band + '_flux_aper2': 'f_ap_cosmos-' + bands[band]})\n",
+    "        imported_columns.update({band + '_fluxerr_aper2': 'ferr_ap_cosmos-' + bands[band]})\n",
+    "    elif 'splash' in band:\n",
+    "        imported_columns.update({band + '_flux': 'f_cosmos-' + bands[band]})\n",
+    "        imported_columns.update({band + '_flux_err': 'ferr_cosmos-' + bands[band]})\n",
+    "        imported_columns.update({band + '_mag': 'm_cosmos-' + bands[band]})\n",
+    "        imported_columns.update({band + '_magerr': 'merr_cosmos-' + bands[band]})        \n",
+    "        \n"
    ]
   },
   {
@@ -143,142 +178,6 @@
    },
    "outputs": [],
    "source": [
-    "imported_columns = OrderedDict({\n",
-    "    'help_id': 'help_id',\n",
-    "    'id': 'cosmos_id',\n",
-    "    'alpha_j2000': 'cosmos_ra',\n",
-    "    'delta_j2000': 'cosmos_dec',\n",
-    "    'ks_mag_auto': 'm_cosmos_ks',\n",
-    "    'ks_magerr_auto': 'merr_cosmos_ks',\n",
-    "    'ks_flux_aper2': 'f_ap_cosmos_ks',\n",
-    "    'ks_fluxerr_aper2': 'ferr_ap_cosmos_ks',\n",
-    "        'y_mag_auto': 'm_cosmos_y',\n",
-    "    'y_magerr_auto': 'merr_cosmos_y',\n",
-    "    'y_flux_aper2': 'f_ap_cosmos_y',\n",
-    "    'y_fluxerr_aper2': 'ferr_ap_cosmos_y',\n",
-    "        'h_mag_auto': 'm_cosmos_h',\n",
-    "    'h_magerr_auto': 'merr_cosmos_h',\n",
-    "    'h_flux_aper2': 'f_ap_cosmos_h',\n",
-    "    'h_fluxerr_aper2': 'ferr_ap_cosmos_h',\n",
-    "        'j_mag_auto': 'm_cosmos_j',\n",
-    "    'j_magerr_auto': 'merr_cosmos_j',\n",
-    "    'j_flux_aper2': 'f_ap_cosmos_j',\n",
-    "    'j_fluxerr_aper2': 'ferr_ap_cosmos_j',\n",
-    "        'b_mag_auto': 'm_cosmos_b',\n",
-    "    'b_magerr_auto': 'merr_cosmos_b',\n",
-    "    'b_flux_aper2': 'f_ap_cosmos_b',\n",
-    "    'b_fluxerr_aper2': 'ferr_ap_cosmos_b',\n",
-    "        'v_mag_auto': 'm_cosmos_v',\n",
-    "    'v_magerr_auto': 'merr_cosmos_v',\n",
-    "    'v_flux_aper2': 'f_ap_cosmos_v',\n",
-    "    'v_fluxerr_aper2': 'ferr_ap_cosmos_v',\n",
-    "        'ip_mag_auto': 'm_cosmos_ip',\n",
-    "    'ip_magerr_auto': 'merr_cosmos_ip',\n",
-    "    'ip_flux_aper2': 'f_ap_cosmos_ip',\n",
-    "    'ip_fluxerr_aper2': 'ferr_ap_cosmos_ip',\n",
-    "        'r_mag_auto': 'm_cosmos_r',\n",
-    "    'r_magerr_auto': 'merr_cosmos_r',\n",
-    "    'r_flux_aper2': 'f_ap_cosmos_r',\n",
-    "    'r_fluxerr_aper2': 'ferr_ap_cosmos_r',\n",
-    "        'u_mag_auto': 'm_cosmos_u',\n",
-    "    'u_magerr_auto': 'merr_cosmos_u',\n",
-    "    'u_flux_aper2': 'f_ap_cosmos_u',\n",
-    "    'u_fluxerr_aper2': 'ferr_ap_cosmos_u',\n",
-    "        'zp_mag_auto': 'm_cosmos_zp',\n",
-    "    'zp_magerr_auto': 'merr_cosmos_zp',\n",
-    "    'zp_flux_aper2': 'f_ap_cosmos_zp',\n",
-    "    'zp_fluxerr_aper2': 'ferr_ap_cosmos_zp',\n",
-    "        'zpp_mag_auto': 'm_cosmos_zpp',\n",
-    "    'zpp_magerr_auto': 'merr_cosmos_zpp',\n",
-    "    'zpp_flux_aper2': 'f_ap_cosmos_zpp',\n",
-    "    'zpp_fluxerr_aper2': 'ferr_ap_cosmos_zpp',\n",
-    "        'ia484_mag_auto': 'm_cosmos_ia484',\n",
-    "    'ia484_magerr_auto': 'merr_cosmos_ia484',\n",
-    "    'ia484_flux_aper2': 'f_ap_cosmos_ia484',\n",
-    "    'ia484_fluxerr_aper2': 'ferr_ap_cosmos_ia484',\n",
-    "        'ia527_mag_auto': 'm_cosmos_ia527',\n",
-    "    'ia527_magerr_auto': 'merr_cosmos_ia527',\n",
-    "    'ia527_flux_aper2': 'f_ap_cosmos_ia527',\n",
-    "    'ia527_fluxerr_aper2': 'ferr_ap_cosmos_ia527',    \n",
-    "        'ia624_mag_auto': 'm_cosmos_ia624',\n",
-    "    'ia624_magerr_auto': 'merr_cosmos_ia624',\n",
-    "    'ia624_flux_aper2': 'f_ap_cosmos_ia624',\n",
-    "    'ia624_fluxerr_aper2': 'ferr_ap_cosmos_ia624',\n",
-    "        'ia679_mag_auto': 'm_cosmos_ia679',\n",
-    "    'ia679_magerr_auto': 'merr_cosmos_ia679',\n",
-    "    'ia679_flux_aper2': 'f_ap_cosmos_ia679',\n",
-    "    'ia679_fluxerr_aper2': 'ferr_ap_cosmos_ia679',\n",
-    "        'ia738_mag_auto': 'm_cosmos_ia738',\n",
-    "    'ia738_magerr_auto': 'merr_cosmos_ia738',\n",
-    "    'ia738_flux_aper2': 'f_ap_cosmos_ia738',\n",
-    "    'ia738_fluxerr_aper2': 'ferr_ap_cosmos_ia738',\n",
-    "        'ia767_mag_auto': 'm_cosmos_ia767',\n",
-    "    'ia767_magerr_auto': 'merr_cosmos_ia767',\n",
-    "    'ia767_flux_aper2': 'f_ap_cosmos_ia767',\n",
-    "    'ia767_fluxerr_aper2': 'ferr_ap_cosmos_ia767',\n",
-    "        'ib427_mag_auto': 'm_cosmos_ib427',\n",
-    "    'ib427_magerr_auto': 'merr_cosmos_ib427',\n",
-    "    'ib427_flux_aper2': 'f_ap_cosmos_ib427',\n",
-    "    'ib427_fluxerr_aper2': 'ferr_ap_cosmos_ib427',\n",
-    "        'ib464_mag_auto': 'm_cosmos_ib464',\n",
-    "    'ib464_magerr_auto': 'merr_cosmos_ib464',\n",
-    "    'ib464_flux_aper2': 'f_ap_cosmos_ib464',\n",
-    "    'ib464_fluxerr_aper2': 'ferr_ap_cosmos_ib464',\n",
-    "        'ib505_mag_auto': 'm_cosmos_ib505',\n",
-    "    'ib505_magerr_auto': 'merr_cosmos_ib505',\n",
-    "    'ib505_flux_aper2': 'f_ap_cosmos_ib505',\n",
-    "    'ib505_fluxerr_aper2': 'ferr_ap_cosmos_ib505',\n",
-    "        'ib574_mag_auto': 'm_cosmos_ib574',\n",
-    "    'ib574_magerr_auto': 'merr_cosmos_ib574',\n",
-    "    'ib574_flux_aper2': 'f_ap_cosmos_ib574',\n",
-    "    'ib574_fluxerr_aper2': 'ferr_ap_cosmos_ib574',\n",
-    "        'ib709_mag_auto': 'm_cosmos_ib709',\n",
-    "    'ib709_magerr_auto': 'merr_cosmos_ib709',\n",
-    "    'ib709_flux_aper2': 'f_ap_cosmos_ib709',\n",
-    "    'ib709_fluxerr_aper2': 'ferr_ap_cosmos_ib709',\n",
-    "        'ib827_mag_auto': 'm_cosmos_ib827',\n",
-    "    'ib827_magerr_auto': 'merr_cosmos_ib827',\n",
-    "    'ib827_flux_aper2': 'f_ap_cosmos_ib827',\n",
-    "    'ib827_fluxerr_aper2': 'ferr_ap_cosmos_ib827',\n",
-    "        'nb711_mag_auto': 'm_cosmos_nb711',\n",
-    "    'nb711_magerr_auto': 'merr_cosmos_nb711',\n",
-    "    'nb711_flux_aper2': 'f_ap_cosmos_nb711',\n",
-    "    'nb711_fluxerr_aper2': 'ferr_ap_cosmos_nb711',\n",
-    "        'nb816_mag_auto': 'm_cosmos_nb816',\n",
-    "    'nb816_magerr_auto': 'merr_cosmos_nb816',\n",
-    "    'nb816_flux_aper2': 'f_ap_cosmos_nb816',\n",
-    "    'nb816_fluxerr_aper2': 'ferr_ap_cosmos_nb816',\n",
-    "        'hw_mag_auto': 'm_cosmos_hw',\n",
-    "    'hw_magerr_auto': 'merr_cosmos_hw',\n",
-    "    'hw_flux_aper2': 'f_ap_cosmos_hw',\n",
-    "    'hw_fluxerr_aper2': 'ferr_ap_cosmos_hw',\n",
-    "        'ksw_mag_auto': 'm_cosmos_ksw',\n",
-    "    'ksw_magerr_auto': 'merr_cosmos_ksw',\n",
-    "    'ksw_flux_aper2': 'f_ap_cosmos_ksw',\n",
-    "    'ksw_fluxerr_aper2': 'ferr_ap_cosmos_ksw',\n",
-    "        'yhsc_mag_auto': 'm_cosmos_yhsc',\n",
-    "    'yhsc_magerr_auto': 'merr_cosmos_yhsc',\n",
-    "    'yhsc_flux_aper2': 'f_ap_cosmos_yhsc',\n",
-    "    'yhsc_fluxerr_aper2': 'ferr_ap_cosmos_yhsc',\n",
-    "        'splash_1_flux': 'f_cosmos_splash_1', #irac_i1\n",
-    "    'splash_1_flux_err': 'ferr_cosmos_splash_1',\n",
-    "    'splash_1_mag': 'm_cosmos_splash_1',\n",
-    "    'splash_1_magerr': 'merr_cosmos_splash_1',\n",
-    "        'splash_2_flux': 'f_cosmos_splash_2', #irac_i2\n",
-    "    'splash_2_flux_err': 'ferr_cosmos_splash_2',\n",
-    "    'splash_2_mag': 'm_cosmos_splash_2',\n",
-    "    'splash_2_magerr': 'merr_cosmos_splash_2',\n",
-    "        'splash_3_flux': 'f_cosmos_splash_3', #irac_i1\n",
-    "    'splash_3_flux_err': 'ferr_cosmos_splash_3',\n",
-    "    'splash_3_mag': 'm_cosmos_splash_3',\n",
-    "    'splash_3_magerr': 'merr_cosmos_splash_3',\n",
-    "        'splash_4_flux': 'f_cosmos_splash_4', #irac_i4\n",
-    "    'splash_4_flux_err': 'ferr_cosmos_splash_4',\n",
-    "    'splash_4_mag': 'm_cosmos_splash_4',\n",
-    "    'splash_4_magerr': 'merr_cosmos_splash_4',\n",
-    "})\n",
-    "\n",
-    "\n",
     "\n",
     "catalogue = Table.read(\"../../dmu0/dmu0_COSMOS2015/data/COSMOS2015-HELP_selected_20160613.fits\")[list(imported_columns)]\n",
     "for column in imported_columns:\n",
@@ -485,14 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "SORT_COLS = []\n",
     "for f in list(bands):\n",
     "    if 'splash' not in f:\n",
-    "        SORT_COLS += ['merr_ap_cosmos_' + f]\n"
+    "        SORT_COLS += ['merr_ap_cosmos-' + bands[f]]\n"
    ]
   },
   {
