--- a/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
@@ -503,7 +503,7 @@
    "source": [
     "nb_merge_dist_plot(\n",
     "    SkyCoord(master_catalogue['ra'], master_catalogue['dec']),\n",
-    "    SkyCoord(cosmos2015['cosmos_ra'], cosmos['cosmos_dec'])\n",
+    "    SkyCoord(cosmos2015['cosmos_ra'], cosmos2015['cosmos_dec'])\n",
     ")"
    ]
   },
@@ -1624,7 +1624,7 @@
    },
    "outputs": [],
    "source": [
-    "columns = [\"help_id\", \"cosmos_id\" \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
+    "columns = [\"help_id\", \"cosmos_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
     "\n",
     "bands = [column[5:] for column in master_catalogue.colnames if 'f_ap' in column]\n",
     "for band in bands:\n",
