--- a/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_COSMOS/2_Merging.ipynb
@@ -1313,7 +1313,10 @@
     "    if '_wirds_h' in col:\n",
     "        master_catalogue.rename_column(col, col.replace('_wirds_h', '_wircam_h'))\n",
     "    if '_wirds_k' in col:\n",
-    "        master_catalogue.rename_column(col, col.replace('_wirds_k', '_wircam_ks'))"
+    "        master_catalogue.rename_column(col, col.replace('_wirds_k', '_wircam_ks'))\n",
+    "    if '_kids_' in col:\n",
+    "        master_catalogue.rename_column(col, col.replace('_kids_', '_omegacam_'))\n",
+    "        "
    ]
   },
   {
@@ -1455,10 +1458,10 @@
     "    1 * ~np.isnan(master_catalogue['f_decam_r']) +\n",
     "    1 * ~np.isnan(master_catalogue['f_decam_z']) +\n",
     "    \n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_u']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_g']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_r']) +\n",
-    "    1 * ~np.isnan(master_catalogue['f_kids_i']) \n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_u']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_g']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_r']) +\n",
+    "    1 * ~np.isnan(master_catalogue['f_omegacam_i']) \n",
     ")\n",
     "\n",
     "nb_nir_flux = (\n",
@@ -1624,7 +1627,7 @@
    },
    "outputs": [],
    "source": [
-    "columns = [\"help_id\", \"cosmos_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
+    "columns = [\"help_id\", \"field\", \"ra\", \"dec\", \"hp_idx\"]\n",
     "\n",
     "bands = [column[5:] for column in master_catalogue.colnames if 'f_ap' in column]\n",
     "for band in bands:\n",
