COSMOS ready to run on Vulcain
#2

--- a/dmu1/dmu1_ml_NGP/2_Merging.ipynb
+++ b/dmu1/dmu1_ml_NGP/2_Merging.ipynb
@@ -480,7 +480,7 @@
    "source": [
     "master_catalogue.add_column(Column(gen_help_id(master_catalogue['ra'], master_catalogue['dec']),\n",
     "                                   name=\"help_id\"))\n",
-    "master_catalogue.add_column(Column(np.full(len(master_catalogue), \"GAMA-12\", dtype='<U18'),\n",
+    "master_catalogue.add_column(Column(np.full(len(master_catalogue), \"NGP\", dtype='<U18'),\n",
     "                                   name=\"field\"))"
    ]
   },
