--- a/dmu28/dmu28_GAMA-09/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_GAMA-09/CIGALE_catalogue_preparation.ipynb
@@ -168,12 +168,12 @@
    "outputs": [],
    "source": [
     "#Based on expecting number counts in checks and diagnostics\n",
-    "u_bands = [\"Megacam u\",\"OmegaCAM u\"]\n",
-    "g_bands = [\"Megacam g\", \"SUPRIME g\", \"OmegaCAM g\", \"DECam g\",  \"GPC1 g\"]\n",
-    "r_bands = [\"Megacam r\", \"SUPRIME r\", \"OmegaCAM r\", \"DECam r\",  \"GPC1 r\"]\n",
-    "i_bands = [\"Megacam i\", \"SUPRIME i\", \"OmegaCAM i\",             \"GPC1 i\"]\n",
-    "z_bands = [\"Megacam z\", \"SUPRIME z\",               \"DECam z\",  \"GPC1 z\"]\n",
-    "y_bands = [             \"SUPRIME y\",               \"VISTA y\",  \"GPC1 y\"]\n",
+    "u_bands = [\"megacam_u\",              \"omegacam_u\"]\n",
+    "g_bands = [\"megacam_g\", \"suprime_g\", \"omegacam_g\", \"decam_g\",  \"gpc1_g\"]\n",
+    "r_bands = [\"megacam_r\", \"suprime_r\", \"omegacam_r\", \"decam_r\",  \"gpc1_r\"]\n",
+    "i_bands = [\"megacam_i\", \"suprime_i\", \"omegacam_i\",             \"gpc1_i\"]\n",
+    "z_bands = [\"megacam_z\", \"suprime_z\",               \"decam_z\",  \"gpc1_z\"]\n",
+    "y_bands = [             \"suprime_y\",               \"vista_y\",  \"gpc1_y\"]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
@@ -207,7 +207,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/GAMA-09_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -236,8 +236,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -311,7 +311,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/GAMA-09_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX))"
+    "best_catalogue.write(\"data_tmp/GAMA-09_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
