--- a/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -33,7 +33,8 @@
    },
    "outputs": [],
    "source": [
-    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_20180130_cigale.fits\")"
+    "SUFFIX=\"20180130\"\n",
+    "master_catalogue = Table.read(\"../../dmu32/dmu32_CDFS-SWIRE/data/CDFS-SWIRE_{}_cigale.fits\".format(SUFFIX))"
    ]
   },
   {
@@ -203,7 +204,7 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_20180129.fits\")"
+    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   },
   {
@@ -232,8 +233,8 @@
    },
    "outputs": [],
    "source": [
-    "#best_catalogue.remove_column(\"redshift\")\n",
-    "#best_catalogue[\"zspec\"].name = \"redshift\""
+    "best_catalogue.remove_column(\"redshift\")\n",
+    "best_catalogue[\"zspec\"].name = \"redshift\""
    ]
   },
   {
@@ -307,7 +308,7 @@
    },
    "outputs": [],
    "source": [
-    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_20180130.fits\", overwrite=True)"
+    "best_catalogue.write(\"data_tmp/CDFS-SWIRE_cigale_best_extcor_zspec_{}.fits\".format(SUFFIX), overwrite=True)"
    ]
   }
  ],
