CDFS-SWIRE running through whole pipeline

--- a/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
+++ b/dmu28/dmu28_CDFS-SWIRE/CIGALE_catalogue_preparation.ipynb
@@ -165,12 +165,12 @@
    },
    "outputs": [],
    "source": [
-    "u_bands = [          \"omegacam_u\"]\n",
-    "g_bands = [\"gpc1_g\", \"omegacam_g\"]\n",
-    "r_bands = [\"gpc1_r\", \"omegacam_r\"]\n",
-    "i_bands = [\"gpc1_i\", \"omegacam_i\"]\n",
-    "z_bands = [\"vista_z\", \"omegacam_z\", \"gpc1_z\",]\n",
-    "y_bands = [\"vista_y\"  \"gpc1_y\", ]\n",
+    "u_bands = [                      \"omegacam_u\"]\n",
+    "g_bands = [           \"decam_g\", \"omegacam_g\", \"gpc1_g\"]\n",
+    "r_bands = [           \"decam_r\", \"omegacam_r\", \"gpc1_r\"]\n",
+    "i_bands = [           \"decam_i\", \"omegacam_i\", \"gpc1_i\"]\n",
+    "z_bands = [\"vista_z\", \"decam_z\", \"omegacam_z\", \"gpc1_z\",]\n",
+    "y_bands = [\"vista_y\", \"decam_y\",               \"gpc1_y\" ]\n",
     "\n",
     "def remove_unneeded_fluxes(list_of_bands):\n",
     "    for band_idx, band in enumerate(list_of_bands[:-1]):\n",
