Adding Specz on AKARI-SEP and Bootes
#18 #5

--- a/dmu1/dmu1_ml_AKARI-NEP/1.3_NEP-Spitzer.ipynb
+++ b/dmu1/dmu1_ml_AKARI-NEP/1.3_NEP-Spitzer.ipynb
@@ -35,13 +35,17 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -91,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "imported_columns = OrderedDict({\n",
@@ -123,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Adding magnitude and band-flag columns\n",
@@ -256,7 +264,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "gaia = Table.read(\"../../dmu0/dmu0_GAIA/data/GAIA_AKARI-NEP.fits\")\n",
@@ -321,7 +331,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "catalogue[RA_COL] = catalogue[RA_COL] + delta_ra.to(u.deg)\n",
