--- a/dmu1/dmu1_ml_Bootes/1.9_zBootes.ipynb
+++ b/dmu1/dmu1_ml_Bootes/1.9_zBootes.ipynb
@@ -36,13 +36,17 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -150,8 +154,10 @@
     "        errcol = \"merr{}\".format(col[1:])\n",
     "        \n",
     "        # Some object have a magnitude to 0, we suppose this means missing value\n",
-    "        catalogue[col][catalogue[col] <= 0] = np.nan\n",
-    "        catalogue[errcol][catalogue[errcol] <= 0] = np.nan  \n",
+    "        # Also some 99. mags\n",
+    "        mask = (catalogue[col] <= 0) | (catalogue[errcol] <= 0) | (catalogue[col] > 90.)\n",
+    "        catalogue[col][mask] = np.nan\n",
+    "        catalogue[errcol][mask] = np.nan  \n",
     "        \n",
     "\n",
     "        flux, error = mag_to_flux(np.array(catalogue[col]), np.array(catalogue[errcol]))\n",
