--- a/dmu1/dmu1_ml_Bootes/3.0_Brown_Checks_and_diagnostics.ipynb
+++ b/dmu1/dmu1_ml_Bootes/3.0_Brown_Checks_and_diagnostics.ipynb
@@ -7,6 +7,8 @@
    },
    "source": [
     "# Bootes master catalogue\n",
+    "\n",
+    "This is to run checks on the catalogue from Michael Brown. It is possible this will not be used for HELP.\n",
     "## Checks and diagnostics"
    ]
   },
@@ -26,13 +28,17 @@
    ],
    "source": [
     "from herschelhelp_internal import git_version\n",
-    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))"
+    "print(\"This notebook was run with herschelhelp_internal version: \\n{}\".format(git_version()))\n",
+    "import datetime\n",
+    "print(\"This notebook was executed on: \\n{}\".format(datetime.datetime.now()))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
